<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DejarBusActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="260dp"
        android:text="@string/tipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="141dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="268dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"

        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="84dp"
        android:text="@string/numeroE"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/txtNumeroBus" />

    <Button
        android:id="@+id/EstacionarBus"
        android:layout_width="182dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="88dp"
        android:text="@string/Estacionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/varmapa"
        android:layout_width="208dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:text="@string/vermapa"
        app:layout_constraintStart_toEndOf="@+id/EstacionarBus"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/txtplaca"
        android:layout_width="131dp"
        android:layout_height="49dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNumeroBus"
        android:layout_width="131dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtplaca" />

    <EditText
        android:id="@+id/txtNumeroEs"
        android:layout_width="187dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>